feat: migrate to Supabase authentication with email OTP
- Add Supabase client with token validation via Admin API
- Add authUserId column to merchants table for Supabase user linking
- Update auth middleware to validate tokens via Supabase instead of manual JWT verification
- Add /auth/bootstrap endpoint for creating merchant profiles on first login
- Update /auth/me to support Supabase-authenticated users
- Add SUPABASE_URL and SUPABASE_SERVICE_ROLE_KEY to config
- Remove dependency on SUPABASE_JWT_SECRET (now validated via Supabase directly)
- Update merchant repository to support authUserId lookups

BREAKING CHANGE: Old JWT tokens no longer valid. All users must re-authenticate via Supabase OTP.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@sendgrid/mail": "^8.1.6",
+    "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.63.0",
@@ -37,6 +38,7 @@
     "ioredis": "^5.4.1",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "morgan": "^1.10.1",
     "opossum": "^9.0.0",
     "rate-limit-redis": "^4.2.3",
@@ -52,6 +54,7 @@
     "@types/hpp": "^0.2.7",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/luxon": "^3.7.1",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.9.0",
     "@types/opossum": "^8.1.9",
