--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "docker:logs": "docker-compose logs -f app"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "6.1.0",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.13.2",
@@ -62,7 +62,7 @@
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.4",
     "jest": "^30.2.0",
-    "prisma": "^6.1.0",
+    "prisma": "6.1.0",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.5",
     "tsx": "^4.19.2",
